<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    tools:context="com.example.ilia.final_exercise.ui.fragments.TopicListFragment">

    <Spinner
        android:id="@+id/fragment_topic_list_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/fragment_topic_list_button_refresh"
            android:layout_width="@dimen/fragment_topic_list_refresh_button_size"
            android:layout_height="@dimen/fragment_topic_list_refresh_button_size"
            android:layout_alignParentLeft="true"
            android:background="@color/primary"
            android:contentDescription="@string/refresh_image_button_description"
            android:scaleType="centerCrop"
            android:src="@drawable/refresh" />

        <EditText
            android:id="@+id/fragment_topic_list_edit_text_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toRightOf="@+id/fragment_topic_list_button_refresh"
            android:layout_toStartOf="@+id/imageView"
            android:inputType="textShortMessage" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/fragment_topic_list_search_button_size"
            android:layout_height="@dimen/fragment_topic_list_search_button_size"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/search_image_button_description"
            android:scaleType="centerInside"
            android:src="@drawable/search" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_topic_list_filter_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/fragment_topic_list_filter_only_my" />

        <Switch
            android:id="@+id/fragment_topic_list_switch_only_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/fragment_topic_list_filter_unpublished" />

        <Switch
            android:id="@+id/fragment_topic_list_switch_unpublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/fragment_topic_list_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@color/primary" />

        <ExpandableListView
            android:id="@+id/fragment_topic_list_exp_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@color/primary"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/fragment_topic_list_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/fragment_topic_list_action_button_range"
            android:layout_marginEnd="@dimen/fragment_topic_list_action_button_range"
            android:layout_marginRight="@dimen/fragment_topic_list_action_button_range"
            android:contentDescription="@string/add_new_article_description"
            android:src="@drawable/add" />

    </RelativeLayout>
</LinearLayout>
