<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.grishberg.android_test_exam.ui.fragments.ArticlesFragment"
            android:background="@color/primary"
              android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/fragment_article_view_button"
            android:text="@string/fragment_articles_view_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            />

        <Button
            android:id="@+id/fragment_article_edit_button"
            android:text="@string/fragment_articles_edit_mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            />
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- ARTICLE CONTROLS -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/relativeLayout"
            android:layout_toStartOf="@+id/relativeLayout">

            <EditText
                android:id="@+id/fragment_article_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/icons"
                android:textColor="@color/primary_text"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:enabled="false"
                />

            <EditText
                android:id="@+id/fragment_article_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:background="@color/icons"
                android:textColor="@color/primary_text"
                android:enabled="false"
                />

            <Spinner
                android:id="@+id/fragment_article_category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            </Spinner>

            <!-- published on off -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_article_publish_switch_text"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>

                <Switch
                    android:id="@+id/fragment_article_publish_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/fragment_article_save_button"
                android:text="@string/fragment_article_save_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="invisible"
                />
        </LinearLayout>

        <!-- IMAGE  and button-->
        <RelativeLayout
            android:layout_width="@dimen/fragment_article_image_size"
            android:layout_height="@dimen/fragment_article_image_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:id="@+id/relativeLayout">
            <ImageView
                android:id="@+id/fragment_articles_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <ImageButton
                android:id="@+id/fragment_article_image_change_button"
                android:text="@string/fragment_articles_image_change_button_text"
                android:enabled="false"
                android:layout_width="@dimen/fragment_article_editimage_button_size"
                android:layout_height="@dimen/fragment_article_editimage_button_size"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/edit"
                android:scaleType="centerInside"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment"/>

</LinearLayout>
